Fix Collections' sort button being too close to checkboxes

--- a/MemoryMosaic/Styles/Pages/Collections.scss
+++ b/MemoryMosaic/Styles/Pages/Collections.scss
@@ -18,7 +18,7 @@ header {
 
 	> #sortBtn {
 		position: absolute;
-		right: 250px;
+		right: 170px;
 	}
 }
 
